--- a/public/dad/styles/demo.css
+++ b/public/dad/styles/demo.css
@@ -1,7 +1,6 @@
 body {
   font-family: Source Sans Pro, Helvetica Neue, Arial, sans-serif;
   font-weight: 100;
-  height: 800px;
   background: #2c2c54;
   overflow-x: hidden;
 }
@@ -198,17 +197,14 @@ h3 small {
   width: 100%;
 }
 
-.area:before {
+.area-1:before {
+  content: "Drop here to delete";
   font-family: Source Sans Pro, Helvetica Neue, Arial, sans-serif;
   position: absolute;
   color: #639bf6;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
-
-.area-1:before {
-  content: "Drop here to delete";
 }
 
 /* footer section */
@@ -228,4 +224,13 @@ footer a {
 footer a:hover {
   text-decoration: none;
   color: #639bf6;
+}
+
+/* custom dad class */
+.dad-placeholder {
+  border: 4px dashed #639bf6;
+}
+
+.area-1 .dad-placeholder {
+  border: none;
 }
