--- a/public/css/main.css
+++ b/public/css/main.css
@@ -70,8 +70,8 @@ a {
 
 a:hover,
 a:focus {
-  text-decoration: none;
-  color: #231f20;
+  text-decoration: underline;
+  color: #639bf6;
   -webkit-transition: all 0.35s ease-in-out;
   -moz-transition: all 0.35s ease-in-out;
   -o-transition: all 0.35s ease-in-out;
@@ -449,12 +449,42 @@ hr.line {
   margin: 20px 0 120px;
 }
 
+.section-title.densed {
+  margin: 20px 0;
+}
+
+.description {
+  text-align: center;
+  max-width: 1024px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.description-links {
+  text-align: center;
+}
+
+.description-links ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.description-links ul li {
+  display: inline-block;
+  margin: 0 10px;
+}
+
 .project-image {
   width: 100%;
   border-radius: 10px;
 }
 
-#newsletter {
+.bg-gray {
   background: #f2f2f2;
 }
 
